# gengine

./: CMakeLists.txt  README.md  main.cpp
assets/textures/: d2_bgrnd.jpegZone.Identifier
include/: Engine.h  Renderer.h
src/: Engine.cpp  Renderer.cpp
test/: test  test.cpp  test.sh
